--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,20 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
+        {
+            "type": "java",
+            "name": "Launch Recursion",
+            "request": "launch",
+            "mainClass": "demolition.Recursion",
+            "projectName": "Demolition"
+        },
+        {
+            "type": "java",
+            "name": "Launch TestClass",
+            "request": "launch",
+            "mainClass": "demolition.TestClass",
+            "projectName": "Demolition"
+        },
         {
             "type": "java",
             "name": "Launch Current File",
